# klatt80

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  coewav.for  getamp.for  handsy.for  meson.build  parcoe.for  runklatt.py  setabc.for  setup.cfg
.github/workflows/: ci.yml
archive/: .travis.yml
docs-en/: AA.DOC  AH.DOC  OY.DOC
klatt/: playklatt.py  plotklatt.py
scripts/: loadraw.m  playklatt.py  playraw.m  plotklatt.py  plotraw.m  raw2wav.sh  runklatt.m  runklatt.py
